Correct CSS link path

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
         <title>Gabe Cook</title>
 
-        <link href="/css/main.css" rel="stylesheet">
+        <link href="/css/app.css" rel="stylesheet">
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-81536605-1"></script>
