Not using Laravel anymore ;)

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
         <div id="app">
             <nav class="navbar navbar-expand-md fixed-top navbar-dark">
                 <div class="container">
-                    <a to="/" class="navbar-brand">Gabe Cook</a>
+                    <a href="/" class="navbar-brand">Gabe Cook</a>
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <svgicon name="bars"></svgicon>
                         &nbsp;Menu
