--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,7 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ml-auto">
+                            <li class="current">&nbsp;</li>
                             <li class="nav-item">
                                 <a href="/about" class="nav-link">
                                     <svgicon name="info-circle"></svgicon>
