:lipstick: (frontend): Clean up main app styles

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
     </script>
   </head>
   <body>
-    <div id="app" class="position-relative min-vh-100 vw-100"></div>
+    <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
