--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/images/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/images/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gabe Cook</title>
 
-    <meta name="description" content="Gabe Cook's portfolio website">
-    <meta name="author" content="Gabe Cook">
+    <meta name="description" content="Gabe Cook's portfolio website" />
+    <meta name="author" content="Gabe Cook" />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#607d8b">
-    <meta name="theme-color" content="#607d8b">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#607d8b" />
+    <meta name="theme-color" content="#607d8b" />
 
-    <meta property='og:title' content='Gabe Cook'/>
-    <meta property='og:image' content='/images/thumb.png'/>
-    <meta property='og:description' content="Gabe Cook's portfolio website"/>
+    <meta property="og:title" content="Gabe Cook" />
+    <meta property="og:image" content="/images/thumb.png" />
+    <meta property="og:description" content="Gabe Cook's portfolio website" />
     <meta property="og:type" content="website" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-81536605-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-      gtag('config', 'UA-81536605-1');
+      gtag("config", "UA-81536605-1");
     </script>
   </head>
   <body>
